Revision history for Ado-Plugin-Site

0.05 2015-04-03
  - Experimented with testing strategies and SQLite database.
    Now tests should pass.
  - Upgraded to Ado 0.87 to use enhanced DBI error reporting
    during database bootstrapping.
  - Added '.travis.yml'.

0.04 2015-04-03
  - Using ':memory:' database during tests to avoid 
    file permission propblems. 

0.03 2015-04-01
  - Fixed JavaScript error in
    public/plugins/site/pages.js create_page().

0.02 2015-03-31
  - We have nice implementation of a page-tree at
    /ado-pages/list and nice and lame jQuery application
    for this screen.
  - We have draft implementation of /ado-pages/create/:pid.
  - Fixed copy-paste errors where wrongly refering to table pages
    instead to domains.
  - Fixed typos in documentation.

0.01 2015-03-30
  - Released first ALPHA version to CPAN.
  - Added links to /ado-domains and /ado-pages to main admin menu.
  - Refactored automatically generated controllers to actually work.
  - Added basic mandatory tests i.e. perl-critic.t, manifest.t
    pod.t, pod-coverage.t, plugin/site-00.t
  - Added needed files to release to CPAN
  - Generated plugin using command
    "ado generate adoplugin -n Site --crud -t 'domains,pages'"